Fixed horizontal scrollbar.
BUG=93450
TEST=Manual

Review URL: http://codereview.chromium.org/7695002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@97485 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 0b243a2835bfbdc2a70492d635326276a49fd5c8

--- a/remoting/webapp/me2mom/choice.css
+++ b/remoting/webapp/me2mom/choice.css
@@ -222,7 +222,6 @@ label {
 }
 
 #session-mode {
-  overflow: auto;
   width: 100%;
   -webkit-user-select: none;
 }
